# aw-watcher-ask

./: .gitignore  README.md  pyproject.toml
LICENSES/: MIT.txt
src/aw_watcher_ask/: __init__.py  __main__.py  cli.py  core.py  models.py  utils.py
tests/: __init__.py  test_cli.py  test_core.py  test_utils.py
